[master] fix form, section block on mobile

--- a/src/styles/content/form.scss
+++ b/src/styles/content/form.scss
@@ -52,12 +52,20 @@
   }
   &__bottom {
     display: flex;
-    margin: -16px;
+    margin: -8px;
     align-items: center;
+    flex-direction: column;
+    @include media-breakpoint-up(sm) {
+      flex-direction: row;
+      margin: -16px;
+    }
   }
   &__bottom-item {
-    padding: 16px;
     display: flex;
+    padding: 8px;
+    @include media-breakpoint-up(sm) {
+      padding: 16px;
+    }
   }
   &__icon-link {
     display: flex;
