--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -60,6 +60,7 @@ body.light {
   transition: opacity 0.2s ease-in-out;
   position: relative;
   overflow: hidden;
+  min-height: 667px;
   &_hidden {
     opacity: 0;
     margin-right: $scrollbar-width;
